--- a/src/css/variables.scss
+++ b/src/css/variables.scss
@@ -1,5 +1,5 @@
 // colours
-$color-teal: #009090;
+$color-teal: #006363;
 $color-grey: #666;
 $color-white: #fff;
 
